# skills-mcp

./: README.md
Skill_Seekers/: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  ROADMAP.md  docker-compose.yml
dsclaude/: .gitignore  LICENSE.md  README.md  README_CN.md  arkclaude  dsclaude  (+45 more)
mimo-mcp/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
mimo-mcp/.claude/: launch.json
mimo-mcp/docs/: PRD.md  USAGE.md
mimo-mcp/scripts/: build_frontend.sh  check.py  dev.sh  download_diarization_models.sh  run_mcp.sh  run_web.sh
mimo-mcp/src/mimo_mcp/: __init__.py  client.py  config.py  logging_setup.py  models.py  server.py  storage.py
mimo-mcp/src/mimo_mcp/api/: __init__.py  _media.py  asr.py  chat.py  diarization.py  tts.py  usage.py  vision.py  voice_clone.py  voice_design.py
mimo-mcp/tests/: conftest.py  test_smoke.py  test_stdio_handshake.py
mimo-mcp/webui/backend/: main.py  sse.py
mimo-mcp/webui/backend/routers/: asr.py  chat.py  tts.py  usage.py  vision.py  voices.py
mimo-mcp/webui/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
mimo-mcp/webui/frontend/src/: App.tsx  index.css
mimo-mcp/webui/frontend/src/components/: CopyButton.tsx  Layout.tsx
mimo-mcp/webui/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
mimo-mcp/webui/frontend/src/lib/: api.ts  history.ts  sse.ts  taskStore.ts  utils.ts
mimo-mcp/webui/frontend/src/pages/: ASR.tsx  AuditLog.tsx  Dashboard.tsx  Sandbox.tsx  TTS.tsx  Vision.tsx  VoiceClone.tsx  VoiceDesign.tsx  Voices.tsx  asr.store.ts  tts.store.ts  vision.store.ts
(+53 files in other folders)
