[project]
name = "mimo-mcp"
version = "0.1.4"
description = "小米 MiMo MCP Server,把 MiMo 全模态能力(Chat / 图像 / 视频 / TTS / 声音克隆 / 声音设计 / ASR)封装为 stdio MCP,供 Claude Code 与 Codex 调用,并附带本地 Web 管理面板。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lay" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "anyio>=4.3.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "yt-dlp>=2026.3.17",
    "sherpa-onnx>=1.13.3",
    "soundfile>=0.14.0",
]

[project.scripts]
mimo-mcp = "mimo_mcp.server:main"
mimo-web = "webui.backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimo_mcp", "webui"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
